AI Extension: Attach bar to toolbar to fix z-index problems

--- a/projects/plugins/jetpack/extensions/blocks/ai-assistant/extensions/jetpack-contact-form/components/ai-assistant-toolbar-button/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/ai-assistant/extensions/jetpack-contact-form/components/ai-assistant-toolbar-button/style.scss
@@ -18,7 +18,3 @@
 		}
 	}
 }
-
-.jetpack-ai-assistant-bar-is-fixed .block-editor-block-contextual-toolbar {
-	margin-bottom: 46px;
-}
